[package]
name = "arena-gs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.64"
ggez = { path = "/Users/donblas/Programming/ggez", default-features = false }
winit = "0.26"
toml = "0.5"
serde = "1.0.97"
bevy_ecs = "0.8.1"
bincode = "1.3.1"

[build-dependencies]
winres = "0.1.11"

# ggez and winit are slow and loading images otherwise
[profile.dev.package."*"]
opt-level = 1
