[package]
name = "arena-gs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]
name = "arenalib"

[dependencies]
anyhow = "1.0.64"
bevy_ecs = "0.8.1"
bincode = "1.3.1"
ggez = { path = "../ggez", default-features = false }
keyframe = "1.1.1"
keyframe_derive = "1.0.0"
line_drawing = "0.8.0"
serde = { version = "1.0.97", features = ["derive"] }
toml = "0.5"
winit = { version = "0.27.3", features = ["serde"] }

hot-lib-reloader = { version = "^0.6", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"

[build-dependencies]
winres = "0.1.11"

# ggez and winit are slow and loading images otherwise
[profile.dev.package."*"]
opt-level = 1

[features]
default = ["hotreload"]
hotreload = [
  "dep:hot-lib-reloader"
]
